<resources>
    <!--Character Creation Stuff-->
    <string name="app_name">DungeonsNDragons</string>
    <string name="title">DnD 5e Character Creator</string>
    <string name="newCharacter">New Character</string>
    <string name="Next">Next</string>
    <string name="insertName">Name Your Character</string>
    <string name="chooseRace">Choose Race</string>
    <string name="chooseClass">Choose Class</string>
    <string name="chooseBackground">Choose Background</string>
    <string name="STR">STR</string>
    <string name="DEX">DEX</string>
    <string name="CON">CON</string>
    <string name="INT">INT</string>
    <string name="WIS">WIS</string>
    <string name="CHA">CHA</string>
    <string name="ptBuy">Point Buy</string>
    <string name="roll">Roll</string>
    <string name="pts">Points Remaining</string>
    <string name="maxpts">27</string>
    <string name="defaultpts">8</string>
    <string name="Up">Up</string>
    <string name="Down">Down</string>
    <string name="blank"> </string>

    <!--Ability Scores and Character Information-->
    <string name="Strength">Strength</string>
    <string name="Dexteriy">Dexterity</string>
    <string name="Constitution">Constitution</string>
    <string name="Intelligence">Intelligence</string>
    <string name="Wisdom">Wisdom</string>
    <string name="Charisma">Charisma</string>
    <string name="HitDice">Hit Dice</string>
    <string name="ArmorClass">Armor Class</string>
    <string name="Proficiency">Proficiency</string>
    <string name="Speed">Speed</string>
    <string name="Initiative">Initiative</string>
    <string name="Name">Name</string>
    <string name="Class">Class</string>
    <string name="Background">Background</string>
    <string name="HP">HP</string>
    <string name="Level">Level</string>
    <string name="Race">Race</string>
    <string name="Blank"> </string>
    <string name="Modifiers">Modifiers</string>
    <string name="Ability">Ability</string>
    <string name="Scores">Scores</string>

    <!--Skill Names-->
    <string name="Athletics">Athletics</string>

    <string name="AnimalHandling">Animal Handling</string>
    <string name="Insight">Insight</string>
    <string name="Medicine">Medicine</string>
    <string name="Perception">Perception</string>
    <string name="Survival">Survival</string>

    <string name="Stealth">Stealth</string>
    <string name="Acrobatics">Acrobatics</string>
    <string name="SOH">Sleight of Hand</string>

    <string name="Arcana">Arcana</string>
    <string name="History">History</string>
    <string name="Nature">Nature</string>
    <string name="Investigation">Investigation</string>
    <string name="Religion">Religion</string>

    <string name="Intimidation">Intimidation</string>
    <string name="Performance">Performance</string>
    <string name="Persuasion">Persuasion</string>
    <string name="Deception">Deception</string>


    <!---Inventory Categories-->
    <string name = "Weapons"> Weapons </string>
    <string name = "Equipment"> Equipment</string>>
    <string name = "Consumables"> Consumables </string>
    <!--NAVIGATION-->

    <string name = "Magic"> Magic </string>
    <string name = "Confirm"> Confirm </string>
    <string name = "PickWeapons">Pick Weapons </string>
    <string name = "PickSkills"> Pick SKills </string>

    <string name="Info">Info</string>
    <string name="Skills">Skills</string>
    <string name="Inventory">Inventory</string>
    <string name="Combat">Combat</string>

    <!--Combat Stuff-->
    <string name="weapon">Weapons</string>
    <string name="Damage">Damage</string>
    <string name="Type">Type</string>
    <string name="tWeapon">Sword</string>
    <string name="tMagic">Fireball</string>
    <string name="burningHands">Burning Hands</string>
    <string name="disguiseSelf">Disguise Self</string>
    <string name="detectMagic">Detect Magic</string>
    <string name="evocation">Evocation</string>
    <string name="illusion">Illusion</string>
    <string name="divination">Divination</string>
    <string name="d6">1D6</string>
    <string name="none">-</string>

</resources>
